[gd_scene load_steps=8 format=3 uid="uid://dpji3mk4jyvyn"]

[ext_resource type="Texture2D" uid="uid://d35orauv810o3" path="res://src/ui/player/ammo/icon_ammo_red_32.png" id="1_4amju"]
[ext_resource type="Script" path="res://src/ui/player/ammo/ammo_ui.gd" id="1_l6owp"]
[ext_resource type="FontFile" uid="uid://bshbbvy5po8nx" path="res://assets/fonts/Ultravision/OTF/Ultravision-Heavy.otf" id="2_3uhco"]
[ext_resource type="Texture2D" uid="uid://dwl0f7i82kxj" path="res://src/ui/player/ammo/icon_ammo_blue_32.png" id="3_3nm61"]
[ext_resource type="Texture2D" uid="uid://cprvabkfd2fmw" path="res://src/ui/player/ammo/icon_ammo_yellow_32.png" id="4_10gbw"]
[ext_resource type="Texture2D" uid="uid://c2hg06nyb6nlf" path="res://src/ui/player/ammo/icon_shell_empty_32.png" id="5_jxdwx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv6le"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="AmmoUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_l6owp")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -38.0
offset_right = 165.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bv6le")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TotalAmmoCounts" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AmmoType1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType1"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType1/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_4amju")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType1"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="AmmoCount1" type="Label" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType1/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uhco")
theme_override_font_sizes/font_size = 32
text = "32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoType2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType2"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType2/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_3nm61")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType2"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="AmmoCount2" type="Label" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType2/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uhco")
theme_override_font_sizes/font_size = 32
text = "32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoType3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType3"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType3/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_10gbw")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType3"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="AmmoCount3" type="Label" parent="MarginContainer/VBoxContainer/TotalAmmoCounts/AmmoType3/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uhco")
theme_override_font_sizes/font_size = 32
text = "32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadedAmmoCount" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Shell1" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer/Shell1"]
layout_mode = 2
texture = ExtResource("5_jxdwx")
stretch_mode = 5

[node name="Shell2" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer/Shell2"]
layout_mode = 2
texture = ExtResource("5_jxdwx")
stretch_mode = 5

[node name="Shell3" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer/Shell3"]
layout_mode = 2
texture = ExtResource("5_jxdwx")
stretch_mode = 5

[node name="Shell4" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer/Shell4"]
layout_mode = 2
texture = ExtResource("5_jxdwx")
stretch_mode = 5

[node name="Shell5" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadedAmmoCount/HBoxContainer/Shell5"]
layout_mode = 2
texture = ExtResource("5_jxdwx")
stretch_mode = 5
